[gd_scene load_steps=8 format=3 uid="uid://b17cgrjwjtlyx"]

[ext_resource type="Script" path="res://header.gd" id="1_vckhh"]
[ext_resource type="Texture2D" uid="uid://bpymmosfsj2rq" path="res://icon.svg" id="2_qh7h6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wfi2d"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.380392, 0.380392, 0.380392, 0.392157)

[sub_resource type="LabelSettings" id="LabelSettings_sv7tk"]
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_o7p5m"]
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_327s3"]
font_size = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_32kau"]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color(0.403922, 0.678431, 0.380392, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.305882, 0.945098, 0.423529, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Header" type="PanelContainer"]
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_wfi2d")
script = ExtResource("1_vckhh")

[node name="Header" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="Header/HBoxContainer3"]
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
texture = ExtResource("2_qh7h6")
expand_mode = 3
stretch_mode = 5

[node name="Label" type="Label" parent="Header/HBoxContainer3"]
layout_mode = 2
text = "Reel Slots"
label_settings = SubResource("LabelSettings_sv7tk")

[node name="WelcomeBannerText" type="HBoxContainer" parent="Header"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="Header/WelcomeBannerText"]
layout_mode = 2
text = "Welcome "
label_settings = SubResource("LabelSettings_o7p5m")

[node name="UsernameLabel" type="Label" parent="Header/WelcomeBannerText"]
layout_mode = 2
text = "Username"
label_settings = SubResource("LabelSettings_327s3")

[node name="BannerText" type="HBoxContainer" parent="Header"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="BannerText" type="Label" parent="Header/BannerText"]
layout_mode = 2
text = "Username Label"
label_settings = SubResource("LabelSettings_327s3")

[node name="HBoxContainer2" type="HBoxContainer" parent="Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Header/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
alignment = 1

[node name="Label" type="Label" parent="Header/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Balance"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Header/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "10000000"

[node name="Button" type="Button" parent="Header/HBoxContainer2"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_32kau")
text = "+"
